# mlx-embeddings

./: .bumpversion.cfg  .editorconfig  .gitignore  .irb_config  CONTRIBUTING.md  Dockerfile  Dockerfile.test.yml  Dockerfile.yml  LICENSE  README.md  SECURITY.md  azure-pipelines.yml  mkdocs.yml  pyproject.toml  requirements.txt  test.py
.beads/: .gitignore  config.yaml  issues.jsonl
.devcontainer/: devcontainer.json  on-create-command.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  codecov.yml  dependabot.yml  issue-close-app.yml  main.workflow  main.workflow.sh  maintainers.json
completions/: internal_commands_list.txt
docs/: .mdl_style.rb  .rubocop.yml  .ruby-version  ARCHITECTURE.md  Acceptable-Casks.md  Acceptable-Formulae.md  Adding-Software-to-Homebrew.md  Analytics.md  Bottles.md  Brew-Livecheck.md  Brew-Maintainer-Guide.md  Brew-Test-Bot-For-Core-Contributors.md  Brew-Test-Bot.md  BrewTestBot-For-Maintainers.md  BrewTestBot.md  Cask-Cookbook.md  Cask-Maintainer-Guide.md  Checksum_Deprecation.md  Common-Issues-for-Core-Contributors.md  Common-Issues.md  Core-Maintainer-Guide.md  Custom-GCC-and-cross-compilers.md  Deprecating-Disabling-and-Removing-Casks.md  Deprecating-Disabling-and-Removing-Formulae.md  Diagram-Guidelines.md  External-Commands.md  FAQ.md  Formula-Cookbook.md  Formula-Merge-Checklist.md  Gemfile  Gems,-Eggs-and-Perl-Modules.md  Homebrew-Governance-Archives.md  Homebrew-Governance.md  Homebrew-Leadership-Responsibilities.md  Homebrew-and-Java.md  Homebrew-and-Python.md  Homebrew-brew-Maintainer-Guide.md  Homebrew-homebrew-cask-Maintainer-Guide.md  Homebrew-homebrew-core-Maintainer-Guide.md  Homebrew-homebrew-core-Merge-Checklist.md  (+45 more)
examples/: qwen3_vl_end_to_end.py  qwen3_vl_retrieval.ipynb
manpages/: README.md  brew-cask.1  brew.1
mlx_embeddings/: __init__.py  cli.py  colvision_processor.py  convert.py  provider.py  tokenizer_utils.py  (+1 more)
(+110 files in other folders)
